Collect-TV-20180201/src/objects/TNET_Section__c.object
<CustomObject>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Description__c</fullName>
        <label>Section Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TNET Tab</label>
        <referenceTo>TNET_Tab__c</referenceTo>
        <relationshipLabel>TNET Sections</relationshipLabel>
        <relationshipName>TNETS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video_Url__c</fullName>
        <label>Video Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TNET Section</label>
    <nameField>
        <label>TNET Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>